Rename client app and clean up

--- a/CarsApp.Client/Pages/CarOwner.cshtml
+++ b/CarsApp.Client/Pages/CarOwner.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model CarsApp.Pages.CarOwner.CarOwnerModel
+@model CarsApp.Client.Pages.CarOwner.CarOwnerModel
 @{
     ViewData["Title"] = "Owner by car brand";
 }
